run exec 수정